💄 fix(style): prevent videos from overflowing container

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -238,6 +238,10 @@ strong {
     text-align: center;
 }
 
+video {
+    max-width: 100%;
+}
+
 .center-content {
     display: flex;
     flex-direction: column;
